@@ -141,7 +141,7 @@ _socketmethods = (
     'bind', 'connect', 'connect_ex', 'fileno', 'listen',
     'getpeername', 'getsockname', 'getsockopt', 'setsockopt',
     'sendall', 'setblocking',
-    'settimeout', 'gettimeout', 'shutdown')
+    'settimeout', 'gettimeout', 'shutdown', 'ioctl')
 
 if sys.platform == "riscos":
     _socketmethods = _socketmethods + ('sleeptaskw',)
